/*
 * $Id: ChangeLog,v 1.1793 2003/11/28 23:20:21 walito Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-11-28 01:50 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * test/service.prg
    + Added support for ST operations.

2003-11-28 20:05 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  % Implementation of control of value returned by SkipBlock.
    If the sign of returned value is not equal to caller, the skip is
    interpreted as 0.
    Reported by Guillermo Varona

2003-11-28 22:15 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/vm/thread.c
    ! fixed windows compilation
  * include/thread.h
    ! activated windows cleanup routines

2003-11-28 21:42 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/thread.h
  * source/vm/thread.c
    + HB_THREAD_ID structure has been added; the thread id is now returned
      in that structure via a garbagable pointer.
    * Code heavily reorganized
    + Added functions
      * GetCurrentThread() --> THREAD, returning an instance of the thread
        item representing the current thread.
      * GetThreadId( [THREAD] ) --> nId, returning the Xharbour VM unique
        thread id of the given thread object (or of the current thread).
      * GetSystemThreadId( [THREAD] ) --> nId, returning, IF POSSIBLE
        a numeric system representation of the given thread, or of the
        current thread if called without parameter.
      * IsSameThread( Th1, [TH2] ) --> lResult; If called with one
        parameter, return true if the given thread object matches
        current thread. If two parameters are passed, it checks if
        the thread objects are referring the same system/vm thread.
    - Removed function ThreadIsSame()
    * "Deprecated" functions ThreadGetCurrent and